application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service  
  labels:
    app: myapp-service    
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
